Unreleased:
- Cleanup some GUI resource leaks
- Allow changing of MAC address separator (many tools use "-" instead of ":")
- Comments for hosts on LAN (tied to MAC address) will now display even if MAC fetcher is not selected, or is after the Comments fetcher #124

Changes in 3.7.3:
- Local IP address popup will now list IPv6 addresses and support IPv6 netmasks
- Support for silent uninstall on Windows #263
- Improve detection of the default primary network interface on Windows #257
- Update Linux SWT for better support for KDE dark themes #247
- Support installing of .deb packages with Java 15 #266
- Do not show first run dialog nor check version updates if run with any command-line arguments (for automation)

Changes in 3.7.2:
- Fix choosing openers from main menu on macOS #243
- Install 64-bit binary by Windows installer if Java is not detected at all #245

Changes in 3.7.1:
- Enable ICMP Echo pinger for Linux x64 only, as it requires the corresponding native .so implementation that is not available for Mac and not needed for Windows
- Add a new Java Built-in pinger by default (InetAddress.isReachable()), which uses ICMP if enough privileges or falls back to TCP port 7
- Fix handling of escape sequences in HTTP Sender
- Fix macOS dark mode switching for some users
- Some fixes in Russian translation
- Internally, replaced Dagger with much simpler DI implementation. Plugins can now declare non-default constructors to benefit from Dependency Injection as well.
- Mac vendors updated

Changes in 3.7.0:
- Windows: use latest NSIS for installer generation, fixing DLL hijacking
- Mac: dark mode support
- Linux: add helpful error message when X Session is not available / running under full root in terminal
- Linux/Ubuntu: fix launching of terminal in openers for newer versions of Gnome
- Raspbian/ARM: New experimental builds without bundled SWT, using the one provided by system
- Updated SWT for all 64-bit platforms
- Updated Chinese translations
- Mac vendors updated
