@@ -285,6 +285,7 @@ preferences.display.confirmation=Confirmation
 preferences.display.confirmation.newScan=Ask for confirmation before starting a new scan
 preferences.display.confirmation.showInfo=Show info dialog after each scan
 preferences.allowReports=Send anonymous error reports
+preferences.versionCheck=Check for new versions
 exporter.txt=Text file (txt)
 exporter.txt.generated=Generated by
 exporter.txt.scanned=Scanned
